2004-11-29	Gaius Mulley <gaius@glam.ac.uk>

	* internal changes to ordinal type which now use the Z
	  type (long_long_int) for internal calculations before
	  being converted into the actual ordinal type at assignment
	  to a variable or procedure parameter or return value.
	* works on a 32 bit i386 but fails on the Opteron LP64 model.
	
2004-11-22	Gaius Mulley <gaius@glam.ac.uk>

        * compiler now checks for overflow at compile time
	  when constructing constant expressions.
	
2004-11-17	Gaius Mulley <gaius@glam.ac.uk>

	* fixed ppg to generate a comment for in-built rules when
	  producing the EBNF documentation within gm2.texi
	* updated gm2/gm2.texi to reflect availability of the
	  gm2-harness which will build and test gm2 automatically.

2004-11-12	Gaius Mulley <gaius@glam.ac.uk>

	* fixed bug reported by John B. Wallace, Jr <wallacjb@enter.net>
	  concerning negating a LONGINT constant
	  (see testsuite/gm2/pim/run/TestLong[34].mod).
	* updated gm2/TODO list
	* gm2/gccgm2.c added functions to determine the size necessary
	  for a Modula-2 constant.
	* gm2/gm2.texi modified documentation to reflect the ISO rules
	  concerning importing enumerated types.
	* gm2/gm2-compiler/SymbolTable.mod fixed possible buffer overflow
	  and integrated MakeConstLit with the changes to gccgm2.c.
	* minor modifications made to gm2/gm2-libs-pim/README.texi
	* moved a number of regression tests into pass/fail directories
	  to reflect the expected ISO enumeration behaviour. Note
	  that many of these now fail.

2004-11-05	Gaius Mulley <gaius@glam.ac.uk>

	* fixed bug reported by John B. Wallace, Jr <wallacjb@enter.net>
	  concerning assignment of a constant to a LONGINT
	  (see testsuite/gm2/pim/run/TestLong.mod).
	  Creation of LONGINT and LONGCARD constant literals
	  was broken for values > MAX(INTEGER).

2004-10-29      John B. Wallace, Jr <wallacjb@enter.net>

	* fixed infinite loop when calling StrToLongInt.
	* contributed test code testsuite/gm2/pim/run/TestLong.mod