@@ -4,10 +4,12 @@
 *  finish ISO language support
 *  finish optimizer support (-O)
 *  back port gm2 to previous releases of gcc
-*  introduce shared library support
+*  introduce shared library support [Iztok]
 *  fix bugs in h2def
 *  implement module priorities using System.TurnInterrupts maybe
 *  fix bugs in compiler exhibited by ulm standard libraries
 *  fix bug in varient record found in SysVec.mod
 *  fix bug (no export qualified leads to unqualified assembler names)
 *  finish documentation (p2, p3, p4 description) and scope behaviour
+*  implement EXCEPT and FINALLY implemented [Christoph Schlegel <modula2@myrealbox.com>]
+
